--- a/_sass/classic/_custom.scss
+++ b/_sass/classic/_custom.scss
@@ -130,7 +130,7 @@
 // ===============================================================
 
 .highlighter-rouge {
-	background: #fc9;
+	background: #eee;
 }
 
 .highlight {
